--- a/public/locales/de/footer.json
+++ b/public/locales/de/footer.json
@@ -1,5 +1,5 @@
 {
-  "kara": "Kleines, handwerkliches Label, das eine sorgfältig kuratierte Kollektion hochwertiger Alltagsutensilien anbietet.",
+  "Imtrils": "Kleines, handwerkliches Label, das eine sorgfältig kuratierte Kollektion hochwertiger Alltagsutensilien anbietet.",
   "company": "Gesellschaft",
   "companyLinks": {
     "about": "Um",
@@ -19,7 +19,7 @@
     "whatsapp": "Whatsapp",
     "support": "Unterstützung 24"
   },
-  "copyright": "Urheberrechte © 2022 KARA Shop",
+  "copyright": "Urheberrechte © 2022 Imtrils",
   "createdBy": "Erstellt Von",
   "reserved": "Alle Rechte Vorbehalten"
 }
