--- a/public/locales/en/footer.json
+++ b/public/locales/en/footer.json
@@ -1,5 +1,5 @@
 {
-  "kara": "Small, artisan label that offers a thoughtfully curated collection of high quality everyday essentials made.",
+  "Imtrils": "Small, artisan label that offers a thoughtfully curated collection of high quality everyday essentials made.",
   "company": "Company",
   "companyLinks": {
     "about": "About",
@@ -19,7 +19,7 @@
     "whatsapp": "Whatsapp",
     "support": "Support 24"
   },
-  "copyright": "Copyright © 2022 KARA Shop",
+  "copyright": "Copyright © 2022 Imtrils",
   "createdBy": "Created By",
   "reserved": "All Right Reserved"
 }
